# fastapi-jwt-auth2

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
examples/: additional_claims.py  asymmetric.py  basic.py  csrf_protection_cookies.py  denylist.py  denylist_redis.py  dynamic_algorithm.py  freshness.py  generate_doc.py  jwt_in_cookies.py  optional.py  refresh.py  websocket.py  websocket_cookie.py
fastapi_jwt_auth2/: __init__.py  auth_jwt.py
