[build-system]
requires = ["flit_core>=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fastapi_jwt_auth"
dist-name = "fastapi-jwt-auth"
author = "Marek Sybilak"
author-email = "marek.sybilak@gmail.com"
home-page = "https://github.com/mareksybilak/fastapi-jwt-auth"

classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

requires = [
  "httpx>=0.23.0",
  "fastapi>=0.88.0",
  "PyJWT>=2.5.0,<3.0.0"
]

description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://github.com/mareksybilak/fastapi-jwt-auth/"

[tool.flit.metadata.requires-extra]
test = [
  "pytest==6.0.1",
  "pytest-cov==2.10.0",
  "coveralls==2.1.2"
]

doc = [
  "mkdocs>=1.1.2,<2.0.0",
  "mkdocs-material>=5.5.0,<6.0.0",
  "markdown-include>=0.5.1,<0.6.0"
]

dev = [
  "cryptography>=38.0.0,<40.0.0",
  "uvicorn>=0.20.0,<0.30.0"
]

asymmetric = ["cryptography>=38.0.0,<40.0.0"]
